--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wayne Norman",
   "license": "ISC",
-  "description": ""
+  "description": " A simple password generator. Can select characteristics (upper case, symbols, numbers), based on arguments with flags"
 }
